# vmw-software-downloader

./: .gitignore  README.md  check-progress.py  constants.py  downloads.json  downloads.py  log.py  main.py  progress.py  pyproject.toml  read_json_files.py  status.py  utils.py  vcc.py  vmw-software-downloader.code-workspace.default
vmw/: log.py  utils.py
